fix CSS on Firefox

--- a/web-demo/index.scss
+++ b/web-demo/index.scss
@@ -5,7 +5,7 @@ main {
 :root {
     height: 100%;
     min-height: 30rem;
-    min-width: 20rch;
+    min-width: 20ch;
     color: var(--color-fg);
     background-color: color-mix(in oklch shorter hue, var(--color-accent) 10%, var(--color-bg) 90%);
     font-family: system-ui;
@@ -95,6 +95,8 @@ demo-container {
             text-orientation: mixed;
             writing-mode: vertical-lr;
             margin-inline: var(--margin-inline);
+            width: max-content;
+            height: max-content;
             transform: rotate(180deg);
         }
 
@@ -119,18 +121,18 @@ demo-container {
         }
 
         &#text-in-wrapper {
-            flex: 1 1 50rch;
-            min-width: calc(min(100%, 30rch));
+            flex: 1 1 50ch;
+            min-width: calc(min(100%, 30ch));
         }
 
         &#text-out-wrapper {
-            flex: 1 1 30rch;
-            min-width: calc(min(100%, 20rch));
+            flex: 1 1 30ch;
+            min-width: calc(min(100%, 20ch));
         }
 
         &#view-out-wrapper {
-            flex: 1 1 40rch;
-            min-width: calc(min(100%, 40rch));
+            flex: 1 1 40ch;
+            min-width: calc(min(100%, 40ch));
             max-width: 60rem;
         }
     }
